--- a/app/src/main/res/layout/activity_display.xml
+++ b/app/src/main/res/layout/activity_display.xml
@@ -4,27 +4,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DisplayActivity"
-    android:orientation="horizontal">
+    tools:context=".DisplayActivity">
+
     <TextView
         android:id="@+id/fname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="FirstName"
-        android:textSize="23dp"/>
+        android:layout_marginLeft="20dp"
+        android:textSize="23dp" />
+
     <TextView
         android:id="@+id/lname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
         android:text="LastName"
-        android:textSize="23dp"
-        android:layout_marginLeft="20dp"/>
+        android:textSize="23dp" />
+
     <TextView
         android:id="@+id/email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="40dp"
         android:text="Email"
-        android:textSize="23dp"
-        android:layout_marginLeft="40dp"/>
+        android:textSize="23dp" />
 
 </LinearLayout>
