--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -130,6 +130,7 @@
             android:layout_height="wrap_content"
             android:textSize="20dp"
             android:text="sign in"
+            android:onClick="login"
             />
     </LinearLayout>
     <androidx.appcompat.widget.AppCompatButton
