--- a/app/src/main/res/layout/activity_list_users.xml
+++ b/app/src/main/res/layout/activity_list_users.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<androidx.appcompat.widget.LinearLayoutCompat android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ListUsersActivity">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".ListUsersActivity"
+    android:orientation="vertical"
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:id="@+id/userRecycler"/>
 
-</LinearLayout>
+</androidx.appcompat.widget.LinearLayoutCompat>
