--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -4,11 +4,21 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     >
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="1"
+        android:id="@+id/id_txt"
+        android:layout_marginLeft="10dp"
+        android:textColor="@color/black"
+        android:textSize="24dp"/>
+
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="FirstName"
+        android:id="@+id/firstname_txt"
         android:layout_marginLeft="10dp"
         android:textColor="@color/black"
         android:textSize="24dp"/>
@@ -17,13 +27,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="LastName"
+        android:id="@+id/last_name_txt"
         android:layout_marginLeft="10dp"
         android:textColor="@color/black"
         android:textSize="24dp"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Age"
+        android:text="Email"
+        android:id="@+id/email_txt"
         android:layout_marginLeft="10dp"
         android:textColor="@color/black"
         android:textSize="24dp"/>
