--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,6 +23,7 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/email_login"
         android:background="@drawable/line"
         android:layout_marginLeft="32dp"
         android:layout_marginRight="20dp"
@@ -43,6 +44,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/line"
         android:layout_marginLeft="32dp"
+        android:id="@+id/login_password"
         android:layout_marginRight="20dp"
         android:layout_marginTop="10dp"
         android:drawableLeft="@drawable/ic_baseline_lock_24"
@@ -61,10 +63,12 @@
         app:rippleColor="@color/blueish"
         android:background="@color/blueish"
         android:layout_marginTop="33dp"
+        android:id="@+id/login_btn"
         android:layout_marginLeft="45dp"
         android:textColor="@color/white"
         android:textStyle="bold"
         android:textSize="16dp"
+        android:onClick="supplier"
         android:text="SIGN IN"/>
 
 </LinearLayout>
