--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -21,6 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="34dp"
+        android:id="@+id/name_register"
         android:layout_marginRight="20dp"
         android:background="@drawable/line"
         android:padding="10dp"/>
@@ -37,6 +38,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/line"
+        android:id="@+id/email_register"
     android:layout_marginLeft="32dp"
         android:layout_marginRight="20dp"
     android:drawableLeft="@drawable/ic_baseline_email_24"
@@ -52,6 +54,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="34dp"
+        android:id="@+id/phonenumber_register"
         android:layout_marginRight="20dp"
         android:text="+2547"
         android:background="@drawable/line"
@@ -69,6 +72,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="34dp"
         android:layout_marginRight="20dp"
+        android:id="@+id/password_register"
         android:background="@drawable/line"
         android:drawableLeft="@drawable/ic_baseline_lock_24"
         android:padding="10dp" />
@@ -85,6 +89,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="34dp"
         android:layout_marginRight="20dp"
+        android:id="@+id/address_register"
         android:background="@drawable/line"
         android:padding="10dp"/>
 
