--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -92,34 +92,37 @@
         android:id="@+id/address_register"
         android:background="@drawable/line"
         android:padding="10dp"/>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Register as?"
-        android:textSize="23dp"
+        android:text="Occupation"
         android:layout_marginLeft="30dp"
+        android:textSize="23dp"
         />
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-    <RadioGroup
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-        <RadioButton
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Supplier"
+            android:text="(Supplier/Wholesaler?)"
             android:textSize="23dp"
-            android:layout_marginLeft="20dp"/>
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Wholesaler"
-            android:textSize="20dp"
-            android:layout_marginLeft="20dp"/>
-    </RadioGroup>
+            android:layout_marginLeft="2dp"
+            />
     </LinearLayout>
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="34dp"
+        android:layout_marginRight="20dp"
+        android:id="@+id/occupation"
+        android:background="@drawable/line"
+        android:padding="10dp"/>
+
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
