--- a/app/src/main/res/layout/activity_example.xml
+++ b/app/src/main/res/layout/activity_example.xml
@@ -40,7 +40,7 @@
         android:layout_height="wrap_content"
         android:text="Register"
         android:onClick="to_login"
-        android:id="@+id/Register"
+        android:id="@+id/register"
         />
 
 </LinearLayout>
