--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,75 +4,78 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RegisterActivity"
     android:orientation="vertical"
+    tools:context=".RegisterActivity"
     >
-<include
-    layout="@layout/registertool"
-    />
+
+    <include layout="@layout/registertool" />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="33dp"
         android:text="Name"
-        android:layout_marginLeft="30dp"
-        android:textSize="23dp"
-        />
+        android:textSize="23dp" />
+
     <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="34dp"
         android:id="@+id/name_register"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="34dp"
         android:layout_marginRight="20dp"
         android:background="@drawable/line"
-        android:padding="10dp"/>
+        android:padding="10dp" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="30dp"
         android:text="E-mail"
-        android:layout_marginLeft="30dp"
         android:textSize="23dp"
 
         />
+
     <EditText
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/line"
         android:id="@+id/email_register"
-    android:layout_marginLeft="32dp"
-        android:layout_marginRight="20dp"
-    android:drawableLeft="@drawable/ic_baseline_email_24"
-    android:padding="10dp"/>
-    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Phone Number"
-        android:layout_marginLeft="30dp"
-        android:textSize="23dp"
-        />
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="34dp"
-        android:id="@+id/phonenumber_register"
+        android:layout_marginLeft="32dp"
         android:layout_marginRight="20dp"
-        android:text="+2547"
         android:background="@drawable/line"
-        android:padding="10dp"/>
+        android:drawableLeft="@drawable/ic_baseline_email_24"
+        android:padding="10dp" />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Password"
         android:layout_marginLeft="30dp"
-        android:textSize="23dp"
-        />
+        android:text="Phone Number"
+        android:textSize="23dp" />
 
     <EditText
+        android:id="@+id/phonenumber_register"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="34dp"
         android:layout_marginRight="20dp"
+        android:background="@drawable/line"
+        android:padding="10dp"
+        android:text="+2547" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="30dp"
+        android:text="Password"
+        android:textSize="23dp" />
+
+    <EditText
         android:id="@+id/password_register"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="34dp"
+        android:layout_marginRight="20dp"
         android:background="@drawable/line"
         android:drawableLeft="@drawable/ic_baseline_lock_24"
         android:padding="10dp" />
@@ -80,80 +83,82 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Address"
         android:layout_marginLeft="30dp"
-        android:textSize="23dp"
-        />
+        android:text="Address"
+        android:textSize="23dp" />
+
     <EditText
+        android:id="@+id/address_register"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="34dp"
         android:layout_marginRight="20dp"
-        android:id="@+id/address_register"
         android:background="@drawable/line"
-        android:padding="10dp"/>
+        android:padding="10dp" />
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Occupation"
-        android:layout_marginLeft="30dp"
-        android:textSize="23dp"
-        />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="30dp"
+            android:text="Occupation"
+            android:textSize="23dp" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="(Supplier/Wholesaler?)"
-            android:textSize="23dp"
             android:layout_marginLeft="2dp"
-            />
+            android:text="(Supplier/Wholesaler?)"
+            android:textSize="23dp" />
     </LinearLayout>
 
     <EditText
+        android:id="@+id/occupation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="34dp"
         android:layout_marginRight="20dp"
-        android:id="@+id/occupation"
         android:background="@drawable/line"
-        android:padding="10dp"/>
+        android:padding="10dp" />
 
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        >
+        android:orientation="horizontal">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Already a member?"
-            android:textSize="24dp"
             android:layout_marginLeft="32dp"
-            />
+            android:text="Already a member?"
+            android:textSize="24dp" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20dp"
-            android:text="sign in"
             android:onClick="login"
-            />
+            android:textColor="@color/blueish"
+            android:text="sign in"
+            android:textSize="20dp" />
     </LinearLayout>
+
     <androidx.appcompat.widget.AppCompatButton
         android:layout_width="194dp"
         android:layout_height="wrap_content"
-        app:rippleColor="@color/blueish"
-        android:background="@color/blueish"
         android:layout_marginLeft="45dp"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        android:textSize="16dp"
+        android:background="@color/blueish"
         android:padding="10dp"
-        android:text="FINISH"/>
+        android:id="@+id/Register"
+        android:text="FINISH"
+        android:textColor="@color/white"
+        android:textSize="16dp"
+        android:textStyle="bold"
+        app:rippleColor="@color/blueish" />
 
 
 </LinearLayout>
