--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="red">#FB0707</color>
     <color name="mine">#3DE6D6</color>
     <color name="orange">#EF683E</color>
+    <color name="green">#82ED5B</color>
 </resources>
