--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -15,14 +15,34 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="30dp"
         android:layout_marginTop="33dp"
-        android:text="Name"
+        android:text="First Name"
         android:textSize="23dp" />
 
     <EditText
         android:id="@+id/name_register"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:drawableLeft="@drawable/ic_baseline_person_24"
+        android:inputType="text"
         android:layout_marginLeft="34dp"
+        android:layout_marginRight="20dp"
+        android:background="@drawable/line"
+        android:padding="10dp" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="10dp"
+        android:text="Last Name"
+        android:textSize="23dp" />
+
+    <EditText
+        android:id="@+id/lastname"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:drawableLeft="@drawable/ic_baseline_person_24"
+        android:layout_marginLeft="34dp"
+        android:inputType="text"
         android:layout_marginRight="20dp"
         android:background="@drawable/line"
         android:padding="10dp" />
@@ -41,6 +61,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="32dp"
+        android:inputType="text"
         android:layout_marginRight="20dp"
         android:background="@drawable/line"
         android:drawableLeft="@drawable/ic_baseline_email_24"
@@ -58,27 +79,36 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="34dp"
+        android:inputType="text"
         android:layout_marginRight="20dp"
         android:background="@drawable/line"
         android:padding="10dp"
         android:text="+2547" />
-
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="30dp"
         android:text="Password"
-        android:textSize="23dp" />
+        android:textSize="23dp"
+        />
 
-    <EditText
-        android:id="@+id/password_register"
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="34dp"
-        android:layout_marginRight="20dp"
-        android:background="@drawable/line"
-        android:drawableLeft="@drawable/ic_baseline_lock_24"
-        android:padding="10dp" />
+        app:passwordToggleEnabled="true"
+        android:layout_marginTop="-10dp"
+        >
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/line"
+            android:layout_marginLeft="32dp"
+            android:id="@+id/password"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="10dp"
+            android:padding="10dp"
+            android:inputType="textPassword"/>
+    </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
         android:layout_width="match_parent"
@@ -94,7 +124,8 @@
         android:layout_marginLeft="34dp"
         android:layout_marginRight="20dp"
         android:background="@drawable/line"
-        android:padding="10dp" />
+        android:padding="10dp"
+        android:inputType="text"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -116,11 +147,13 @@
             android:textSize="23dp" />
     </LinearLayout>
 
-    <EditText
+    <TextView
         android:id="@+id/occupation"
         android:layout_width="match_parent"
+        android:completionThreshold="1"
         android:layout_height="wrap_content"
         android:layout_marginLeft="34dp"
+        android:inputType="text"
         android:layout_marginRight="20dp"
         android:background="@drawable/line"
         android:padding="10dp" />
