--- a/app/src/main/res/drawable-v24/line.xml
+++ b/app/src/main/res/drawable-v24/line.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
 <stroke
-    android:color="@color/blueish"
+    android:color="@color/black"
     android:width="1dp"
     />
     <size android:height="24dp"
