--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -11,26 +11,18 @@
         android:id="@+id/id_txt"
         android:layout_marginLeft="10dp"
         android:textColor="@color/black"
-        android:textSize="24dp"/>
-
+        />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="FirstName"
+        android:text="Name"
         android:id="@+id/firstname_txt"
         android:layout_marginLeft="10dp"
         android:textColor="@color/black"
-        android:textSize="24dp"/>
+        />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="LastName"
-        android:id="@+id/last_name_txt"
-        android:layout_marginLeft="10dp"
-        android:textColor="@color/black"
-        android:textSize="24dp"/>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -38,29 +30,24 @@
         android:id="@+id/email_txt"
         android:layout_marginLeft="10dp"
         android:textColor="@color/black"
-        android:textSize="24dp"/>
+        />
+
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="LastName"
-        android:id="@+id/Phonenumber_txt"
-        android:layout_marginLeft="10dp"
-        android:textColor="@color/black"
-        android:textSize="24dp"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="LastName"
+        android:text="Occupation"
         android:id="@+id/Occupation_txt"
         android:layout_marginLeft="10dp"
         android:textColor="@color/black"
-        android:textSize="24dp"/>
+        />
 
     <Button
+        android:id="@+id/delete_user"
         android:layout_width="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_height="wrap_content"
-        android:text="VIEW"/>
+        android:text="Delete"/>
 
 
 </LinearLayout>
