--- a/app/src/main/res/layout/supplieritem.xml
+++ b/app/src/main/res/layout/supplieritem.xml
@@ -74,9 +74,9 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/delete_supplier_goods"
-        android:background="@color/blueish"
+        android:background="@drawable/btn"
         android:layout_width="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:layout_marginLeft="10dp"
         android:layout_height="wrap_content"
         android:text="Delete record"/>
