--- a/app/src/main/res/layout/activity_supplier_maps.xml
+++ b/app/src/main/res/layout/activity_supplier_maps.xml
@@ -7,22 +7,44 @@
     tools:context=".SupplierMapsActivity"
     android:orientation="vertical">
 
+    <fragment
+        android:id="@+id/map"
+        android:layout_width="match_parent"
+        android:layout_height="655dp"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        />
 
-<fragment
-    android:id="@+id/map"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:name="com.google.android.gms.maps.SupportMapFragment"
-    />
-    <EditText
+    <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="InputLocation"
-        android:id="@+id/location"
-        />
-    <Button
-        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        >
+    <androidx.appcompat.widget.AppCompatButton
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Find Goods"
+        android:background="@drawable/btn"
+        android:layout_marginLeft="30dp"
+        android:text="Accept"
         android:id="@+id/find"/>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="30dp"
+        android:background="@drawable/btn"
+        android:text="Decline"
+        />
+    <androidx.appcompat.widget.AppCompatButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="30dp"
+        android:background="@drawable/btn"
+        android:text="Call"
+        />
+    </androidx.appcompat.widget.LinearLayoutCompat>
+
+
+
+
+
 </androidx.appcompat.widget.LinearLayoutCompat>
