--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -20,9 +20,9 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Products For Sale"
+        android:text="Products On Sale"
         android:textSize="24dp"
-        android:layout_marginLeft="170dp"
+        android:layout_marginLeft="150dp"
         android:textColor="@color/white"
         android:layout_marginTop="10dp"
         android:textStyle="bold"
