--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,7 +18,7 @@
         android:text="E-mail"
         android:layout_marginLeft="30dp"
         android:layout_marginTop="30dp"
-        android:textSize="23dp"
+        android:textSize="19dp"
 
         />
     <EditText
@@ -37,7 +37,7 @@
         android:layout_height="wrap_content"
         android:text="Password"
         android:layout_marginLeft="30dp"
-        android:textSize="23dp"
+        android:textSize="19dp"
         android:layout_marginTop="34dp"
         />
     <com.google.android.material.textfield.TextInputLayout
@@ -68,34 +68,36 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+        <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Don't have an account?"
+        android:textColor="@color/black"
+        android:layout_marginLeft="34dp"
+        android:layout_marginTop="20dp"
+        android:textSize="17dp"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Register"
+            android:onClick="register_login"
+            android:textColor="@color/blueish"
+            android:layout_marginTop="20dp"
+            android:textSize="17dp"/>
+    </androidx.appcompat.widget.LinearLayoutCompat>
+
+
     <androidx.appcompat.widget.AppCompatButton
-        android:layout_width="112dp"
+        android:layout_width="180dp"
         android:layout_height="wrap_content"
         app:rippleColor="@color/black"
-        android:background="@color/blueish"
+        android:background="@drawable/btn"
         android:layout_marginTop="33dp"
         android:id="@+id/login_btn"
         android:layout_marginLeft="45dp"
-        android:textColor="@color/white"
-        android:textStyle="bold"
         android:textSize="16dp"
         android:onClick="supplier"
-        android:text="SIGN IN AS SUPPLIER"
+        android:text="SIGN IN"
         android:textAllCaps="false"/>
-    <androidx.appcompat.widget.AppCompatButton
-        android:layout_width="112dp"
-        android:layout_height="wrap_content"
-        app:rippleColor="@color/black"
-        android:background="@color/blueish"
-        android:layout_marginTop="33dp"
-        android:id="@+id/login"
-        android:layout_marginLeft="45dp"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        android:textSize="16dp"
-        android:onClick="buyer"
-        android:text="SIGN IN AS BUYER"
-        android:textAllCaps="false"/>
-    </androidx.appcompat.widget.LinearLayoutCompat>
 
 </LinearLayout>
