--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -16,7 +16,7 @@
         android:layout_marginLeft="30dp"
         android:layout_marginTop="33dp"
         android:text="First Name"
-        android:textSize="23dp" />
+        android:textSize="19dp" />
 
     <EditText
         android:id="@+id/name_register"
@@ -34,7 +34,7 @@
         android:layout_marginLeft="30dp"
         android:layout_marginTop="10dp"
         android:text="Last Name"
-        android:textSize="23dp" />
+        android:textSize="19dp" />
 
     <EditText
         android:id="@+id/lastname"
@@ -52,7 +52,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="30dp"
         android:text="E-mail"
-        android:textSize="23dp"
+        android:textSize="19dp"
 
         />
 
@@ -72,7 +72,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="30dp"
         android:text="Phone Number"
-        android:textSize="23dp" />
+        android:textSize="19dp" />
 
     <EditText
         android:id="@+id/phonenumber_register"
@@ -83,13 +83,13 @@
         android:layout_marginRight="20dp"
         android:background="@drawable/line"
         android:padding="10dp"
-        android:text="+2547" />
+        android:text="+254" />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="30dp"
         android:text="Password"
-        android:textSize="23dp"
+        android:textSize="19dp"
         />
 
     <com.google.android.material.textfield.TextInputLayout
@@ -110,12 +110,31 @@
             android:inputType="textPassword"/>
     </com.google.android.material.textfield.TextInputLayout>
 
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="30dp"
+        android:text="Occupation"
+        android:textSize="19dp" />
+
+    <AutoCompleteTextView
+        android:id="@+id/buyer_produc_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:completionThreshold="1"
+        android:layout_marginLeft="34dp"
+        android:inputType="text"
+        android:layout_marginRight="20dp"
+        android:background="@drawable/line"
+        android:padding="10dp" />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="30dp"
         android:text="Address"
-        android:textSize="23dp" />
+        android:textSize="19dp" />
 
     <EditText
         android:id="@+id/address_register"
@@ -127,49 +146,19 @@
         android:padding="10dp"
         android:inputType="text"/>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:text="Occupation"
-            android:textSize="23dp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="2dp"
-            android:text="(Supplier/Wholesaler?)"
-            android:textSize="23dp" />
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/occupation"
-        android:layout_width="match_parent"
-        android:completionThreshold="1"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="34dp"
-        android:inputType="text"
-        android:layout_marginRight="20dp"
-        android:background="@drawable/line"
-        android:padding="10dp" />
-
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginTop="10dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="32dp"
             android:text="Already a member?"
-            android:textSize="24dp" />
+            android:textSize="19dp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -177,21 +166,21 @@
             android:onClick="login"
             android:textColor="@color/blueish"
             android:text="sign in"
-            android:textSize="20dp" />
+            android:textSize="17dp" />
     </LinearLayout>
 
     <androidx.appcompat.widget.AppCompatButton
-        android:layout_width="194dp"
+        android:id="@+id/Register"
+        android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="45dp"
-        android:background="@color/blueish"
-        android:padding="10dp"
-        android:id="@+id/Register"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/btn"
+        android:onClick="register"
         android:text="FINISH"
-        android:textColor="@color/white"
+        android:textAllCaps="false"
         android:textSize="16dp"
-        android:textStyle="bold"
-        app:rippleColor="@color/blueish" />
+        app:rippleColor="@color/black" />
 
 
 </LinearLayout>
