--- a/app/src/main/res/layout/activity_supplier.xml
+++ b/app/src/main/res/layout/activity_supplier.xml
@@ -8,32 +8,24 @@
     android:orientation="vertical"
     >
     <include layout="@layout/toolbar"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Product on Sale"
-        android:layout_marginLeft="10dp"
-        android:textSize="33dp"
-        android:textStyle="bold"
-        android:layout_marginTop="10dp"/>
+
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="30dp">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="1."
-            android:textStyle="bold"
             android:layout_marginLeft="10dp"
-            android:textSize="20dp"/>
+            android:textSize="19dp"/>
     <AutoCompleteTextView
         android:id="@+id/supplier_product_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Input Product Name"
-        android:textSize="20dp"
+        android:textSize="19dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="20dp"
         android:background="@drawable/line"
@@ -51,16 +43,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="2."
-            android:textSize="20dp"
-            android:textStyle="bold"
+            android:textSize="19dp"
             android:layout_marginLeft="10dp"
             />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="  Insert Product Image"
-        android:textStyle="bold"
-        android:textSize="20dp"/>
+        android:textSize="19dp"/>
     </androidx.appcompat.widget.LinearLayoutCompat>
 
         <TextView
@@ -81,16 +71,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="3."
-            android:textSize="20dp"
-            android:textStyle="bold"
+            android:textSize="19dp"
             android:layout_marginLeft="10dp"
             />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="  Product Description"
-            android:textSize="20dp"
-            android:textStyle="bold"/>
+            android:textSize="19dp"
+            />
     </androidx.appcompat.widget.LinearLayoutCompat>
 
 <EditText
@@ -114,16 +103,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="4."
-            android:textSize="20dp"
-            android:textStyle="bold"
+            android:textSize="19dp"
             android:layout_marginLeft="10dp"
             />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="   Price"
-            android:textSize="20dp"
-            android:textStyle="bold"/>
+            android:textSize="19dp"
+            />
     </androidx.appcompat.widget.LinearLayoutCompat>
 
     <EditText
@@ -147,16 +135,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="5."
-            android:textSize="20dp"
-            android:textStyle="bold"
+            android:textSize="19dp"
             android:layout_marginLeft="10dp"
             />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="   Areas Targetted"
-            android:textSize="20dp"
-            android:textStyle="bold"/>
+            android:textSize="19dp"
+            />
     </androidx.appcompat.widget.LinearLayoutCompat>
 
     <AutoCompleteTextView
@@ -181,16 +168,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="6."
-            android:textSize="20dp"
-            android:textStyle="bold"
+            android:textSize="19dp"
             android:layout_marginLeft="10dp"
             />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="   Phone Number"
-            android:textSize="20dp"
-            android:textStyle="bold"/>
+            android:textSize="19dp"
+           />
     </androidx.appcompat.widget.LinearLayoutCompat>
 
     <EditText
@@ -199,25 +185,22 @@
         android:layout_height="wrap_content"
         android:background="@drawable/line"
         android:layout_marginRight="20dp"
-        android:hint="+2547..."
+        android:hint="+254..."
         android:layout_marginLeft="30dp"
         android:padding="5dp"
         />
 
-
     <androidx.appcompat.widget.AppCompatButton
-        android:layout_width="194dp"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="190dp"
-        android:layout_marginTop="9dp"
-        android:background="@color/blueish"
-        android:padding="10dp"
-        android:id="@+id/supplier"
-        android:text="Proceed to sell"
-        android:textColor="@color/white"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="180dp"
+        android:background="@drawable/btn"
+        android:text="sell PRODUCT"
         android:textSize="16dp"
-        android:textStyle="bold"
-        app:rippleColor="@color/blueish" />
+        android:id="@+id/Sell"
+        />
+
 
 
 
