--- a/app/src/main/res/layout/buyertool.xml
+++ b/app/src/main/res/layout/buyertool.xml
@@ -20,9 +20,9 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Products to buy"
-        android:textSize="30dp"
-        android:layout_marginLeft="150dp"
+        android:text="Product to buy"
+        android:textSize="28dp"
+        android:layout_marginLeft="170dp"
         android:textColor="@color/white"
         android:layout_marginTop="10dp"
         android:textStyle="bold"
