--- a/app/src/main/res/layout/activity_supplier_maps.xml
+++ b/app/src/main/res/layout/activity_supplier_maps.xml
@@ -18,6 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:layout_marginTop="10dp"
         >
     <androidx.appcompat.widget.AppCompatButton
         android:layout_width="wrap_content"
